# omni-dl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
omni_dl/: __main__.py  download.py  settings.py  ui.py
omni_dl/models/: task.py  user.py
omni_dl/schemas/: task.py  user.py
omni_dl/serve/: app.py  worker.py
omni_dl/utils/: logger.py  security.py
